fix: head z-index

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -4,7 +4,7 @@
   background: $main-white;
   position: fixed;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
   box-shadow: 0px 10px 20px 0px rgba(0, 71, 126, 0.1);
 
   .header {
